[package]
name = "playerctl-sys"
version = "2.4.1"
authors = ["ap-1 <anishp0828@gmail.com>"]
edition = "2021"
description = "Unsafe bindings to libplayerctl"
readme = "README.md"
documentation = "https://docs.rs/playerctl-sys"
homepage = "https://github.com/ap-1/playerctl-sys"
repository = "https://github.com/ap-1/playerctl-sys"
license = "LGPL-3.0-or-later"
keywords = ["mpris", "dbus"]
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.60.1"